/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

syntax = "proto3";
package org.apache.geode.protocol.protobuf;

import "google/protobuf/any.proto";
import "region_API.proto";
import "server_API.proto";
import "authentication_API.proto";
import "basicTypes.proto";

message Message {
    MessageHeader messageHeader = 1;
    oneof messageType {
        Request request = 2;
        Response response = 3;
    }
}

message MessageHeader {
    int32 correlationId = 1;
    MetaData metadata = 2;
}

message Request {
    CallbackArguments callbackArg = 1;
    oneof requestAPI {
        PutRequest put_Request = 2;
        GetRequest get_Request = 3;
        PutAllRequest put_All_Request = 4;
        GetAllRequest get_All_Request = 5;
        RemoveRequest remove_Request = 6;

        GetAvailableServersRequest get_Available_Servers_Request = 42;
        GetRegionNamesRequest get_Region_Names_Request = 43;
        GetRegionRequest get_Region_Request = 44;

        AuthenticationHandshakeRequest authentication_Handshake_Request = 60;
        AuthenticationRequest authentication_Request = 61;
    }
}

message Response {
    oneof responseAPI {
        PutResponse put_Response = 2;
        GetResponse get_Response = 3;
        PutAllResponse put_All_Response = 4;
        GetAllResponse get_All_Response = 5;
        RemoveResponse remove_Response = 6;

        ErrorResponse error_Response = 13;

        GetAvailableServersResponse get_Available_Servers_Response = 42;
        GetRegionNamesResponse get_Region_Names_Response = 43;
        GetRegionResponse get_Region_Response = 44;

        AuthenticationHandshakeResponse authentication_Handshake_Response = 60;
        AuthenticationResponse authentication_Response = 61;
    }
}

message MetaData {
    int32 numberOfMetadata = 1;
    map<int32, google.protobuf.Any> metaDataEntries = 2;
}